Making `@DbEntity` repeatable.